public/css/style.css
/* ... */
*/
/***style page line***/
.cr-boundary {
	background: rgba(204, 204, 204, 0.11);
	border: 1px solid #e7ecf1;
}

.file-btn:hover, .file-btn input:hover, .file-btn input[type="file"]:hover {
	cursor: pointer;
}

.file-btn input[type="file"] {
	cursor: pointer;
	font-size: 100px;
	filter: alpha(opacity=1);
	-moz-opacity: 0.01;
	opacity: 0.01;
	position: absolute;
	right: 0;
	top: 0;
}

.croppie-container {
	position: relative;
}

.croppie-container .file-btn {
	display: block;
	z-index: 9999;
	overflow: hidden;
	cursor: pointer;
	color: white;
	border-radius: 3px;
	font-size: 16px;
	text-decoration: none;
	text-shadow: none;
	padding: 0;
}

.croppie-container .cr-viewport {
	border: none !important;
}

.map {
	height: 300px;
	clear: both;
}

.border-line {
	border: 1px solid #e7ecf1;
	padding: 15px !important;
}

.title-block {
	float: left;
	background: #fff;
	margin: 0;
	padding: 5px 10px !important;
	margin-top: -30px !important;
	margin-left: 18px !important;
}

.offset-top-2 {
	margin-top: 20px !important;
}

.offset-top-5 {
	margin-top: 50px !important;
}

.offset-bottom-1_5 {
	margin-bottom: 15px !important;
}

.offset-table-retreat {
	padding: 30px 15px 15px !important;
}

.wrapper-location {
	display: inline-block;
	width: 100%;
}

.wrapper-location.form-md-line-input .form-control {
	width: 100% !important;
	padding-right: 0 !important;
}

.editable-input {
	margin-bottom: 5px;
}

.tabbable-line > .nav-tabs > li.active, .tabbable-line > .nav-tabs > li:hover, .tabbable-line > .nav-tabs > li:focus {
	border: 1px solid #36c6d3;
	background: #36c6d3;
}

.tabbable-line > .nav-tabs > li.active a, .tabbable-line > .nav-tabs > li:hover a, .tabbable-line > .nav-tabs > li:focus a {
	color: #fff;
}

.tabbable-line > .nav-tabs > li {
	border: 1px solid #e7ecf1;
	border-radius: 4px 4px 0 0;
}

.tabbable-line > .nav-tabs > li a {
	text-align: center;
}

.tabbable-line > .tab-content {
	width: 100%;
	display: inline-block;
	padding: 30px 15px;
	border: 1px solid #eef1f5;
}

.description-general {
	padding: 0 0 0 30px;
}

.editable-input textarea, .form-inline .form-group {
	width: 100% !important;
}

.wrapper-line {
	width: 100%;
	display: inline-block;
}

.form-group.form-md-line-input {
	margin: 0 auto;
}

.block-music {
	padding: 0;
}

.block-manager {
	height: 503px;
}

.cover-picture {
	width: 100%;
}

.wrapper-line.border-line {
	position: relative;
}

.pac-container {
	z-index: 100000 !important;
}

.input-add {
	width: 100%;
	display: inline-block;
	margin: 15px 0;
}

.input-add > div {
	float: left !important;
	padding: 0;
}

.mt-info .cover-button {
	background: none;
	border: 1px solid #fff;
}

.mt-element-overlay .mt-overlay-1 .mt-info .cover-button:hover {
	background: #fff;
	color: #666;
}

.form-textarea .editable-inline, .editable-inline {
	width: 100% !important;
}

.form-textarea .editable-input {
	width: 65% !important;
}

.bootstrap-switch .bootstrap-switch-handle-on, .bootstrap-switch .bootstrap-switch-handle-off, .bootstrap-switch .bootstrap-switch-label {
	padding: 6px;
}

.switch-lang {
	z-index: 9999;
}

.vertical-row {
	display: table;
	width: 100%;
}

.vertical-row p {
	margin: 0;
}

.vertical-row > * {
	display: table-cell;
	float: none;
}

.vertical-center > * {
	vertical-align: middle;
}

pre {
	margin-bottom: 0;
}

.facebook-icon {
	width: 20px;
	height: 20px;
}

.vertical-top label {
	vertical-align: top;
}

.multiselect-item b {
	color: #3d3d3d;
}

.multiselect-container > li:not(.multiselect-item) a {
	padding-left: 15px !important;
}

.multiselect-container.dropdown-menu {
	padding: 10px 0;
}

.form-textarea.description-general .editable {
	height: 147px;
	overflow: auto;
}

.activity-date, .activity-time {
	display: inline-block;
	padding-right: 8px;
}

#users-list-datatable .activity-date {
	display: block;
	font-size: 12px;
	margin: 0;
	padding: 0;
}

#users-list-datatable .activity-time {
	display: block;
	font-size: 10px;
	margin: 0;
	padding: 0;
}

.bootstrap-switch-handle-off {
	min-width: 80px;
}

.horizontal-tab {
	padding: 15px;
	margin-top: 10px;
}

/***gallery-grid***//*
.gallery-grid .mt-element-overlay img {
	height: 300px;
}*/

.gallery-grid .mt-element-overlay {
	padding: 0 3px;
	margin: 3px 0;
	overflow: hidden;
}

.mt-element-overlay .mt-overlay-5 .mt-overlay {
	background-color: rgba(0, 0, 0, 0.55);
}

.gallery-grid .line-item .mt-overlay {
	cursor: pointer;
}

/*****************/

#button-filters .btn.active {
	color: #fff;
	background-color: #207780;
	border-color: #123339;
}

.table-tab > tbody > tr > td {
	vertical-align: middle;
}

.modal-open {
	overflow-y: hidden !important;
}

.radio input[type="radio"] {
	opacity: 0;
}

.radio-default {
	margin: 0;
	float: left;
}

.radio-default .btn {
	padding: 6px 12px !important;
}

.radio input[type="radio"]:checked + label {
	color: #fff !important;
	background-color: #207780 !important;
	border-color: #123339 !important;
}

